--- a/StarWarz/StarWarz/CoreData/Base.lproj/Main.storyboard
+++ b/StarWarz/StarWarz/CoreData/Base.lproj/Main.storyboard
@@ -158,16 +158,16 @@
                                             <rect key="frame" x="0.0" y="0.0" width="349" height="116"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xxF-yy-r1R">
-                                                    <rect key="frame" x="16" y="20.5" width="75" height="75"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xxF-yy-r1R">
+                                                    <rect key="frame" x="16" y="33" width="50" height="50"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="75" id="95Y-f3-P4S"/>
-                                                        <constraint firstAttribute="height" constant="75" id="Bed-b6-pRQ"/>
+                                                        <constraint firstAttribute="width" constant="50" id="95Y-f3-P4S"/>
+                                                        <constraint firstAttribute="height" constant="50" id="Bed-b6-pRQ"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZNz-CF-xl5">
-                                                    <rect key="frame" x="107" y="48" width="226" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="82" y="48" width="251" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -212,10 +212,10 @@
             </objects>
             <point key="canvasLocation" x="176.80000000000001" y="-373.76311844077964"/>
         </scene>
-        <!--Split View Controller-->
+        <!--Character List Split View Controller-->
         <scene sceneID="lZh-dd-Dy9">
             <objects>
-                <splitViewController id="u2b-do-yqT" sceneMemberID="viewController">
+                <splitViewController id="u2b-do-yqT" customClass="CharacterListSplitViewController" customModule="StarWarz" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
                         <segue destination="PkO-cv-3VG" kind="relationship" relationship="masterViewController" id="P94-4h-FdE"/>
                         <segue destination="yqJ-qe-SDi" kind="relationship" relationship="detailViewController" id="eHy-Vl-0dI"/>
