--- a/StarWarz/StarWarz/Base.lproj/Main.storyboard
+++ b/StarWarz/StarWarz/Base.lproj/Main.storyboard
@@ -15,20 +15,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vVQ-g4-pt4">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vVQ-g4-pt4">
                                 <rect key="frame" x="16" y="60" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="ACn-ws-V8r"/>
                                     <constraint firstAttribute="width" constant="100" id="wiZ-gJ-kTX"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1P-Sa-eXu">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1P-Sa-eXu">
                                 <rect key="frame" x="124" y="60" width="235" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birth date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="DQL-kQ-6GK">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birth date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DQL-kQ-6GK">
                                 <rect key="frame" x="124" y="92" width="80" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="obX-wc-DLT"/>
@@ -37,49 +37,48 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Force sensitive:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bh3-cN-bKB">
-                                <rect key="frame" x="16" y="195" width="120" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Force sensitive:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bh3-cN-bKB">
+                                <rect key="frame" x="16" y="195" width="160" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="w0h-gy-vVc"/>
+                                    <constraint firstAttribute="width" constant="160" id="w0h-gy-vVc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Affiliation:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2xL-PX-8pW">
-                                <rect key="frame" x="16" y="232" width="80" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Affiliation:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2xL-PX-8pW">
+                                <rect key="frame" x="16" y="232" width="160" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="Yui-vI-7At"/>
+                                    <constraint firstAttribute="width" constant="160" id="Yui-vI-7At"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ErA-I7-ZrY">
-                                <rect key="frame" x="144" y="195" width="215" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ErA-I7-ZrY">
+                                <rect key="frame" x="184" y="195" width="175" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eN-gK-kXo">
-                                <rect key="frame" x="104" y="232" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eN-gK-kXo">
+                                <rect key="frame" x="184" y="232" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="SgC-gG-VAb">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SgC-gG-VAb">
                                 <rect key="frame" x="212" y="92" width="147" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QTz-kC-T9d">
-                                <rect key="frame" x="154" y="230" width="25" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="JeV-oh-J7k"/>
-                                    <constraint firstAttribute="width" constant="25" id="hWE-WS-RG6"/>
-                                </constraints>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hpj-HA-5kL">
+                                <rect key="frame" x="166.5" y="323" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -87,9 +86,8 @@
                             <constraint firstItem="DQL-kQ-6GK" firstAttribute="leading" secondItem="vVQ-g4-pt4" secondAttribute="trailing" constant="8" id="1br-bW-q6S"/>
                             <constraint firstItem="DQL-kQ-6GK" firstAttribute="top" secondItem="i1P-Sa-eXu" secondAttribute="bottom" constant="8" id="6SC-jj-nu9"/>
                             <constraint firstItem="ErA-I7-ZrY" firstAttribute="leading" secondItem="Bh3-cN-bKB" secondAttribute="trailing" constant="8" id="Dnr-dj-UdB"/>
-                            <constraint firstItem="QTz-kC-T9d" firstAttribute="centerY" secondItem="3eN-gK-kXo" secondAttribute="centerY" id="DzW-IT-GCW"/>
                             <constraint firstItem="SgC-gG-VAb" firstAttribute="top" secondItem="i1P-Sa-eXu" secondAttribute="bottom" constant="8" id="Lha-0e-OPf"/>
-                            <constraint firstItem="QTz-kC-T9d" firstAttribute="leading" secondItem="3eN-gK-kXo" secondAttribute="trailing" constant="8" id="PV9-rt-IbF"/>
+                            <constraint firstItem="hpj-HA-5kL" firstAttribute="centerX" secondItem="hPe-LZ-t22" secondAttribute="centerX" id="OsD-hT-bZA"/>
                             <constraint firstItem="i1P-Sa-eXu" firstAttribute="leading" secondItem="vVQ-g4-pt4" secondAttribute="trailing" constant="8" id="T2q-id-E4t"/>
                             <constraint firstItem="vVQ-g4-pt4" firstAttribute="leading" secondItem="rWf-RZ-h31" secondAttribute="leading" constant="16" id="TOA-Y5-byW"/>
                             <constraint firstItem="ErA-I7-ZrY" firstAttribute="centerY" secondItem="Bh3-cN-bKB" secondAttribute="centerY" id="YEy-Yc-QEe"/>
@@ -102,6 +100,7 @@
                             <constraint firstItem="3eN-gK-kXo" firstAttribute="centerY" secondItem="2xL-PX-8pW" secondAttribute="centerY" id="hlC-zV-qaT"/>
                             <constraint firstItem="Bh3-cN-bKB" firstAttribute="top" secondItem="vVQ-g4-pt4" secondAttribute="bottom" constant="35" id="jU5-mv-MOx"/>
                             <constraint firstItem="Bh3-cN-bKB" firstAttribute="leading" secondItem="rWf-RZ-h31" secondAttribute="leading" constant="16" id="lDG-xV-yin"/>
+                            <constraint firstItem="hpj-HA-5kL" firstAttribute="centerY" secondItem="hPe-LZ-t22" secondAttribute="centerY" id="nZd-h6-zK9"/>
                             <constraint firstItem="2xL-PX-8pW" firstAttribute="top" secondItem="Bh3-cN-bKB" secondAttribute="bottom" constant="16" id="yWB-8c-pIU"/>
                             <constraint firstItem="vVQ-g4-pt4" firstAttribute="top" secondItem="rWf-RZ-h31" secondAttribute="top" constant="16" id="ykg-Ie-35a"/>
                         </constraints>
@@ -110,9 +109,9 @@
                     <connections>
                         <outlet property="affiliationLabel" destination="2xL-PX-8pW" id="5oy-Wu-FEd"/>
                         <outlet property="affiliationValue" destination="3eN-gK-kXo" id="042-Ew-Qd8"/>
-                        <outlet property="affliationImageView" destination="QTz-kC-T9d" id="8Py-mh-duP"/>
                         <outlet property="birthDateLabel" destination="DQL-kQ-6GK" id="jWD-67-0lK"/>
                         <outlet property="birthDateValue" destination="SgC-gG-VAb" id="f5X-yj-uK8"/>
+                        <outlet property="emptyStateLabel" destination="hpj-HA-5kL" id="bni-Ir-lwi"/>
                         <outlet property="forceSensitiveLabel" destination="Bh3-cN-bKB" id="ESv-JD-hrR"/>
                         <outlet property="forceSensitiveValue" destination="ErA-I7-ZrY" id="rW9-5f-xNT"/>
                         <outlet property="nameLabel" destination="i1P-Sa-eXu" id="xAc-5y-hoc"/>
